--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,23 +4,23 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Home
+  - name: home
     url: '#about'
     weight: 10
-  - name: Posts
+  - name: blog
     url: '#posts'
-    weight: 20
-  - name: Projects
-    url: '#projects'
-    weight: 30
-  - name: Talks
-    url: '#talks'
-    weight: 40
-  - name: Publications
-    url: '#featured'
+    weight: 90
+  - name: research
+    url: '#research'
     weight: 50
-  - name: Contact
+  - name: publications
+    url: '#featured'
+    weight: 40
+  - name: contact
     url: '#contact'
+    weight: 20
+  - name: teaching
+    url: '#teaching'
     weight: 60
 
 # Link to a PDF of your resume/CV from the menu.
