--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -16,10 +16,10 @@ appearance:
 marketing:
   seo:
     site_type: Person
-    local_business_type: ''
-    org_name: ''
-    description: 'A highly-customizable Hugo academic resume theme powered by Wowchemy website builder.'
-    twitter: 'wowchemy'
+    local_business_type: 'Higher Education'
+    org_name: 'Loyola University Chicago'
+    description: 'Konstantin Läufer, Professor of Computer Science, Loyola University Chicago'
+    twitter: 'loyolachicagocs'
   analytics:
     google_analytics: ''
     baidu_tongji: ''
@@ -54,7 +54,7 @@ footer:
 
 locale:
   date_format: 'Jan 2, 2006'
-  time_format: '3:04 PM'
+  time_format: '15:04'
   address_format: en-us
 
 # Site features
@@ -70,7 +70,7 @@ features:
   privacy_pack:
     enable: false
   repository:
-    url: 'https://github.com/<username>/<repository>'
+    url: 'https://github.com/klaeufer/klaeufer.github.io'
     content_dir: content
     branch: master
   avatar:
@@ -84,7 +84,7 @@ features:
     commento:
       url: ''
   search:
-    provider: wowchemy
+    provider: google
     algolia:
       app_id: ''
       api_key: ''
