--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -21,7 +21,7 @@ marketing:
     description: 'Konstantin Läufer, Professor of Computer Science, Loyola University Chicago'
     twitter: 'loyolachicagocs'
   analytics:
-    google_analytics: 'G-E9W3XPB4BP'
+    google_analytics: 'G-K59QLQZ07E'
     baidu_tongji: ''
   verification:
     google: ''
