--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,9 +7,9 @@ main:
   - name: about
     url: '#about'
     weight: 10
-  - name: blog
-    url: '#posts'
-    weight: 20
+#  - name: blog
+#    url: '#posts'
+#    weight: 20
   - name: contact
     url: '#contact'
     weight: 30
