--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: 'Konstantin Läufer' # Website name
-baseURL: 'https://klaeufer.github.io/' # Website URL
+baseURL: 'https://laufer.cs.luc.edu/' # Website URL
 
 ############################
 ## LANGUAGE
