--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,7 +8,7 @@ main:
     url: '#about'
     weight: 10
   - name: blog
-    url: 'https://twitter.com/klaeufer'
+    url: 'https://linkedin.com/in/gkthiruvathukal'
     weight: 20
   - name: contact
     url: '#contact'
