--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,10 +4,10 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: about
+  - name: bio
     url: '#about'
     weight: 10
-  - name: blog
+  - name: linkedin
     url: 'https://linkedin.com/in/gkthiruvathukal'
     weight: 20
   - name: contact
