--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: 'George K. Thiruvathukal, PhD' # Website name
-baseURL: 'https://gkt.cs.luc.edu' # Website URL
+baseURL: 'https://gkt.sh' # Website URL
 
 ############################
 ## LANGUAGE
